--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.vscode
+
+
+
 ## C++      ---------------------------------------------------------------------------------------------------------------
 # Prerequisites
 *.d
